# n

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: lint.yml
IA/: BinPacking.py  Distribution.py  Graph.py  Map.py  Problem.py  UI.py  Vehicle.py  __init__.py  __main__.py  binpack.py  graph.py  map.py  problem.py  structs.py  ui.py
report/: report.tex
res/: SaoVitor.json  SaoVitor.pickle
